--- a/相册.html
+++ b/相册.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Enovo3D相册</title>
  
-<link type="text/css" href="css/z轴旋转.css" rel="stylesheet" />
+<link type="text/css" href="z轴旋转.css" rel="stylesheet" />
  
 </head>
 <body>
